--- a/package.json
+++ b/package.json
@@ -20,16 +20,21 @@
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@ngrx/effects": "^12.0.0",
+    "@ngrx/entity": "^12.0.0",
     "@ngrx/store": "^12.0.0",
+    "@ngrx/store-devtools": "^12.0.0",
     "d3": "^6.7.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
+    "yarn": "^1.22.10",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.2",
     "@angular/cli": "~12.0.2",
     "@angular/compiler-cli": "~12.0.2",
+    "@ngrx/schematics": "^12.0.0",
     "@types/d3": "^6.7.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
