--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngrx/store-devtools": "^12.0.0",
     "d3": "^6.7.0",
     "firebase": "^7.0 || ^8.0",
+    "jasmine-marbles": "^0.8.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "yarn": "^1.22.10",
