lazy load and eslint no type any

--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,12 @@
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": ["**/*.spec.ts", "**/*.ts"]
+          }
+        },
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
