--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "firebase": "^7.0 || ^8.0",
     "jasmine-marbles": "^0.8.3",
     "rxjs": "~6.6.0",
+    "three": "^0.151.3",
     "tslib": "^2.1.0",
     "yarn": "^1.22.10",
     "zone.js": "~0.11.4"
@@ -49,6 +50,7 @@
     "@types/d3": "^6.7.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/three": "0.148.0",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "eslint": "^8.31.0",
