--- a/package.json
+++ b/package.json
@@ -12,23 +12,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.4.0",
-    "@angular/cdk": "^12.0.2",
+    "@angular/cdk": "^13.0.0",
     "@angular/common": "~13.4.0",
     "@angular/compiler": "~13.4.0",
     "@angular/core": "~13.4.0",
-    "@angular/fire": "^7.0.0",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~13.4.0",
-    "@angular/material": "^12.0.2",
+    "@angular/material": "^13.0.0",
     "@angular/platform-browser": "~13.4.0",
     "@angular/platform-browser-dynamic": "~13.4.0",
     "@angular/router": "~13.4.0",
     "@firebase/rules-unit-testing": "^1.3.7",
-    "@ngrx/effects": "^12.0.0",
-    "@ngrx/entity": "^12.0.0",
-    "@ngrx/store": "^12.0.0",
-    "@ngrx/store-devtools": "^12.0.0",
+    "@ngrx/effects": "^13.0.0",
+    "@ngrx/entity": "^13.0.0",
+    "@ngrx/store": "^13.0.0",
+    "@ngrx/store-devtools": "^13.0.0",
+    "@types/firebase": "^2.4.32",
     "d3": "^6.7.0",
-    "firebase": "^7.0 || ^8.0",
+    "firebase": "^7.24.0",
     "jasmine-marbles": "^0.8.3",
     "rxjs": "~6.6.0",
     "three": "^0.151.3",
@@ -46,7 +47,7 @@
     "@angular-eslint/template-parser": "13.5.0",
     "@angular/cli": "~13.3.11",
     "@angular/compiler-cli": "~13.4.0",
-    "@ngrx/schematics": "^12.0.0",
+    "@ngrx/schematics": "^13.0.0",
     "@types/d3": "^6.7.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
@@ -59,13 +60,13 @@
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
-    "jasmine-core": "~3.7.0",
+    "jasmine-core": "^4.0.0",
     "jsonc-parser": "^3.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine": "^5.0.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "ng-packagr": "^13.3.1",
     "open": "^7.0.3",
     "typescript": "~4.6.4"
